--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "google-auth-library": "^9.14.2",
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^8.6.1"
+    "mongoose": "^8.6.1",
+    "square": "^38.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
