--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.6.1",
+    "nodemailer": "^6.9.16",
     "square": "^38.2.0"
   },
   "devDependencies": {
